Bug 192117 - Plasma crashes when trying to add Network Manager widget
Summary: Plasma crashes when trying to add Network Manager widget
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Plasma Widget (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
: 189691 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-05-09 12:06 UTC by michal
Modified: 2009-07-31 19:41 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description michal 2009-05-09 12:06:17 UTC
Version:            (using KDE 4.2.2)
OS:                Linux
Installed from:    Unlisted Binary Package

When I click "add widget" button in widget list plasma crashes. It happens only for Network Manager widget.

Here is a backtrace:

Application: Plasma Workspace (plasma), signal SIGSEGV
[Current thread is 1 (Thread 0xb4ff3b20 (LWP 3917))]

Thread 3 (Thread 0xa9a40b90 (LWP 3925)):
#0  0xb806c430 in __kernel_vsyscall ()
#1  0xb5537735 in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S:122
#2  0xb7f91153 in __pthread_cond_wait (cond=0x82fc818, mutex=0x82fc800) at forward.c:139
#3  0xb6ac455d in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0xb55e36db in ?? () from /usr/lib/libQtNetwork.so.4
#5  0xb6ac360a in ?? () from /usr/lib/libQtCore.so.4
#6  0xb5533fff in start_thread (arg=0x0) at pthread_create.c:297
#7  0xb5533f1a in __free_tcb (pd=0x0) at pthread_create.c:216
#8  0xb7f8518e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:133

Thread 2 (Thread 0xa90ffb90 (LWP 3930)):
#0  0xb806c430 in __kernel_vsyscall ()
#1  0xb5537735 in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S:122
#2  0xb7f91153 in __pthread_cond_wait (cond=0x820b500, mutex=0x820b4e8) at forward.c:139
#3  0xb6ac455d in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#4  0xa9b102d1 in RenderThread::run (this=0x82d740c) at /usr/src/debug/kdebase-workspace-4.2.2/plasma/wallpapers/image/renderthread.cpp:91
#5  0xb6ac360a in ?? () from /usr/lib/libQtCore.so.4
#6  0xb5533fff in start_thread (arg=0x0) at pthread_create.c:297
#7  0xb5533f1a in __free_tcb (pd=0x0) at pthread_create.c:216
#8  0xb7f8518e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:133

Thread 1 (Thread 0xb4ff3b20 (LWP 3917)):
[KCrash Handler]
#6  0xb73ee9f1 in QGraphicsItem::setVisible(bool) () from /usr/lib/libQtGui.so.4
#7  0xa88bb343 in QGraphicsItem::show (this=<value optimized out>) at /usr/include/qt4/QtGui/qgraphicsitem.h:184
#8  InterfaceItem::setConnectionInfo (this=<value optimized out>) at /usr/src/debug/kde4-kdeplasma-addons-networkmanager-949018/applet/interfaceitem.cpp:255
#9  0xa88bbc8c in InterfaceItem::activeConnectionsChanged (this=0x86189c8) at /usr/src/debug/kde4-kdeplasma-addons-networkmanager-949018/applet/interfaceitem.cpp:308
#10 0xa88be422 in InterfaceItem::InterfaceItem(struct Solid::Control::NetworkInterface *, struct NetworkManagerSettings *, struct NetworkManagerSettings *, InterfaceItem::NameDisplayMode, struct QGraphicsItem *) (this=0x86189c8, iface=0x85e92c8, userSettings=0x852e100, systemSettings=0x85480a0, mode=InterfaceItem::InterfaceName, parent=0x859ac78)
    at /usr/src/debug/kde4-kdeplasma-addons-networkmanager-949018/applet/interfaceitem.cpp:180
#11 0xa88c2b1a in WiredInterfaceItem::WiredInterfaceItem(struct Solid::Control::WiredNetworkInterface *, struct NetworkManagerSettings *, struct NetworkManagerSettings *, InterfaceItem::NameDisplayMode, struct QGraphicsItem *) (this=0x86189c8, iface=0x85e92c8, userSettings=0x852e100, systemSettings=0x85480a0, mode=InterfaceItem::InterfaceName, parent=0x859ac78)
    at /usr/src/debug/kde4-kdeplasma-addons-networkmanager-949018/applet/wiredinterfaceitem.cpp:39
#12 0xa88b5544 in InterfaceGroup::addInterfaceInternal (this=0x859ac70, iface=0x85e92c8) at /usr/src/debug/kde4-kdeplasma-addons-networkmanager-949018/applet/interfacegroup.cpp:292
#13 0xa88b5bec in InterfaceGroup::setupHeader (this=0x859ac70) at /usr/src/debug/kde4-kdeplasma-addons-networkmanager-949018/applet/interfacegroup.cpp:111
#14 0xa88a618f in ConnectionList::init (this=0x859ac70) at /usr/src/debug/kde4-kdeplasma-addons-networkmanager-949018/applet/connectionlist.cpp:46
#15 0xa88ab391 in NetworkManagerApplet::initExtenderItem (this=0x85a7d58, eItem=0x8652058) at /usr/src/debug/kde4-kdeplasma-addons-networkmanager-949018/applet/networkmanager.cpp:174
#16 0xa88acaac in NetworkManagerApplet::showWired (this=0x85a7d58, show=true) at /usr/src/debug/kde4-kdeplasma-addons-networkmanager-949018/applet/networkmanager.cpp:731
#17 0xa88adfac in NetworkManagerApplet::networkInterfaceAdded (this=0x85a7d58, uni=@0xbfd8953c) at /usr/src/debug/kde4-kdeplasma-addons-networkmanager-949018/applet/networkmanager.cpp:396
#18 0xa88ae985 in NetworkManagerApplet::init (this=0x85a7d58) at /usr/src/debug/kde4-kdeplasma-addons-networkmanager-949018/applet/networkmanager.cpp:139
#19 0xb7e1c307 in Plasma::Containment::addApplet (this=0x8198420, applet=0x85a7d58, pos=@0xbfd89630, delayInit=false) at /usr/src/debug/kdelibs-4.2.2/plasma/containment.cpp:757
#20 0xb7e1c51c in Plasma::ContainmentPrivate::addApplet (this=0x81a9550, name=@0xbfd896e0, args=@0xbfd896dc, appletGeometry=@0xbfd896a8, id=0, delayInit=<value optimized out>)
    at /usr/src/debug/kdelibs-4.2.2/plasma/containment.cpp:1699
#21 0xb7e1c689 in Plasma::Containment::addApplet (this=0x8198420, name=@0xbfd896e0, args=@0xbfd896dc, appletGeometry=@0xbfd896a8) at /usr/src/debug/kdelibs-4.2.2/plasma/containment.cpp:697
#22 0xb8038c93 in Plasma::AppletBrowserWidget::addApplet (this=0x85f3680) at /usr/src/debug/kdebase-workspace-4.2.2/plasma/shells/common/appletbrowser.cpp:265
#23 0xb803ccaa in Plasma::AppletBrowserWidget::qt_metacall (this=0x85f3680, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbfd897a8)
    at /usr/src/debug/kdebase-workspace-4.2.2/build/plasma/shells/desktop/appletbrowser.moc:80
#24 0xb6bbd799 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#25 0xb6bbe394 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#26 0xb797076f in KDialog::applyClicked (this=0x852cb48) at /usr/src/debug/kdelibs-4.2.2/build/kdeui/kdialog.moc:237
#27 0xb7972d7d in KDialog::slotButtonClicked (this=0x852cb48, button=8) at /usr/src/debug/kdelibs-4.2.2/kdeui/dialogs/kdialog.cpp:851
#28 0xb797406c in KDialog::qt_metacall (this=0x852cb48, _c=QMetaObject::InvokeMetaMethod, _id=33, _a=0xbfd8996c) at /usr/src/debug/kdelibs-4.2.2/build/kdeui/kdialog.moc:182
#29 0xb803d834 in Plasma::AppletBrowser::qt_metacall (this=0x852cb48, _c=QMetaObject::InvokeMetaMethod, _id=69, _a=0xbfd8996c)
    at /usr/src/debug/kdebase-workspace-4.2.2/build/plasma/shells/desktop/appletbrowser.moc:136
#30 0xb6bbd799 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#31 0xb6bbe394 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#32 0xb6bc03f7 in QSignalMapper::mapped(int) () from /usr/lib/libQtCore.so.4
#33 0xb6bc0bc7 in QSignalMapper::map(QObject*) () from /usr/lib/libQtCore.so.4
#34 0xb6bc0d96 in QSignalMapper::map() () from /usr/lib/libQtCore.so.4
#35 0xb6bc15a5 in QSignalMapper::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#36 0xb6bbd799 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#37 0xb6bbdb8c in QMetaObject::activate(QObject*, QMetaObject const*, int, int, void**) () from /usr/lib/libQtCore.so.4
#38 0xb7466d73 in QAbstractButton::clicked(bool) () from /usr/lib/libQtGui.so.4
#39 0xb71be1bf in ?? () from /usr/lib/libQtGui.so.4
#40 0xb71bfbd2 in ?? () from /usr/lib/libQtGui.so.4
#41 0xb71bfdfb in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libQtGui.so.4
#42 0xb6e5fa7e in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#43 0xb71be08c in QAbstractButton::event(QEvent*) () from /usr/lib/libQtGui.so.4
#44 0xb725ea22 in QPushButton::event(QEvent*) () from /usr/lib/libQtGui.so.4
#45 0xb6e0f39b in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#46 0xb6e177ef in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#47 0xb79fd595 in KApplication::notify (this=0x806a8f0, receiver=0x854efc8, event=0xbfd8a0f4) at /usr/src/debug/kdelibs-4.2.2/kdeui/kernel/kapplication.cpp:307
#48 0xb6ba8c12 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#49 0xb6e16935 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&) () from /usr/lib/libQtGui.so.4
#50 0xb6e7eb53 in ?? () from /usr/lib/libQtGui.so.4
#51 0xb6e7e039 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#52 0xb6ea5028 in ?? () from /usr/lib/libQtGui.so.4
#53 0xb537c646 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#54 0xb537f7f1 in ?? () from /usr/lib/libglib-2.0.so.0
#55 0x08075668 in ?? ()
#56 0x00000000 in ?? ()
Comment 1 xapeiron 2009-05-19 02:40:02 UTC
Same bug for me.

Version:           (using KDE 4.2.2)
OS:                Linux
Installed from:    kde-plasma-networkmanagement.x86_64 0:0.1-0.11.20090504svn.fc11

dont have enugh space on disk to install debuginfo packages for usable backtrace.
At least errors from console:

plasmoidviewer(5788)/libplasma Plasma::FrameSvg::resizeFrame: Invalid size QSizeF(0, 24)
plasmoidviewer(5788)/libplasma Plasma::FrameSvg::resizeFrame: Invalid size QSizeF(0, 0)
plasmoidviewer(5788)/libplasma Plasma::FrameSvg::resizeFrame: Invalid size QSizeF(0, 24)
plasmoidviewer(5788)/libplasma Plasma::FrameSvg::resizeFrame: Invalid size QSizeF(0, 0)
KCrash: Application 'plasmoidviewer' crashing...
Comment 2 Sebastian Kügler 2009-05-19 10:09:19 UTC
SVN commit 969897 by sebas:

Don't crash when setConnectionInfo() is called but the UI hasn't been set up yet

BUG:192117

 M  +13 -12    interfaceitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=969897
Comment 3 Will Stephenson 2009-07-31 19:41:32 UTC
*** Bug 189691 has been marked as a duplicate of this bug. ***