Don't crash when setConnectionInfo() is called but the UI hasn't been set up yet

BUG:192117